dev/platform/callback.yml
# Source: application-deploy/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: callback-service
  namespace: game-platform-kg
  annotations:
    prometheus.io/path: /actuator/prometheus
    prometheus.io/port: "8090"
    prometheus.io/scrape: "true"
  labels:
    app: callback-service
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: callback-service
---
# Source: application-deploy/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: callback-service
  namespace: game-platform-kg
  labels:
    app: callback-service
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
    type: RollingUpdate
  selector:
    matchLabels:
      app: callback-service
  template:
    metadata:
      labels:
        app: callback-service
    spec:
      imagePullSecrets:
      - name: docker-registry-pull
      containers:
      - name: callback-service
        image: harbor-game.beeline.kg/qazcode-export/quizzes/callback-service:test-1229915 # {"$imagepolicy": "flux-system:game-platform-kg.callback-service"}
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /actuator/health
            port: 8090
          initialDelaySeconds: 30
          periodSeconds: 20
          successThreshold: 1
          timeoutSeconds: 3
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /actuator/health
            port: 8090
          initialDelaySeconds: 15
          periodSeconds: 10
          successThreshold: 1
        resources:
          limits:
            memory: 1024Mi
          requests:
            memory: 700Mi
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - callback-service
              topologyKey: failure-domain.beta.kubernetes.io/zone
            weight: 100
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - callback-service
            topologyKey: kubernetes.io/hostname
