dev/platform/gateway.yml
# Source: application-deploy/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  namespace: game-platform-kg
  labels:
    app: gateway
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
    type: RollingUpdate
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      imagePullSecrets:
      - name: docker-registry-pull
      volumes:
      - name: gateway-config
        configMap:
          name: gateway
      containers:
      - name: gateway
        image: "harbor-game.beeline.kg/qazcode-export/game-platform/gateway:dev-1184295"
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        resources:
          limits:
            memory: 256Mi
          requests:
            memory: 128Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/nginx/conf.d/default.conf
          name: gateway-config
          subPath: default.conf
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - gateway
              topologyKey: failure-domain.beta.kubernetes.io/zone
            weight: 100
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - gateway
            topologyKey: kubernetes.io/hostname
---
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: game-platform-kg
  labels:
    app: gateway
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: gateway
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  name: gateway
  namespace: game-platform-kg
spec:
  entryPoints: []
  routes:
  - kind: Rule
    match: Host(`gaming-test.beeline.kg`) && PathPrefix(`/`)
    priority: 0
    services:
    - kind: Service
      name: gateway
      namespace: game-platform-kg
      port: 8080
  tls:
    secretName: beeline-kg
